--- a/src/resources/GameScene.fxml
+++ b/src/resources/GameScene.fxml
@@ -63,12 +63,12 @@
             <Font name="System Italic" size="9.0" />
          </font>
       </Text>
-      <RadioButton fx:id="chill" layoutX="13.0" layoutY="245.0" mnemonicParsing="false" onAction="#changeSongList" text="Chill" />
-      <RadioButton fx:id="trap" layoutX="13.0" layoutY="271.0" mnemonicParsing="false" onAction="#changeSongList" text="Trap" />
+      <RadioButton fx:id="ChillList" layoutX="13.0" layoutY="245.0" mnemonicParsing="false" onAction="#changeSongList" text="Chill" />
+      <RadioButton fx:id="TrapList" layoutX="13.0" layoutY="271.0" mnemonicParsing="false" onAction="#changeSongList" text="Trap" />
       <CheckBox fx:id="pauseCheckBox" layoutX="12.0" layoutY="357.0" mnemonicParsing="false" onAction="#pauseSong" text="Pause" />
       <ImageView fx:id="songPictureDisplayer" fitHeight="80.0" fitWidth="80.0" layoutX="32.0" layoutY="60.0" pickOnBounds="true" preserveRatio="true" />
-      <RadioButton fx:id="hipHop" layoutX="13.0" layoutY="299.0" mnemonicParsing="false" onAction="#changeSongList" text="HipHop" />
-      <RadioButton fx:id="disco" layoutX="13.0" layoutY="327.0" mnemonicParsing="false" onAction="#changeSongList" text="Disco" />
+      <RadioButton fx:id="HipHopList" layoutX="13.0" layoutY="299.0" mnemonicParsing="false" onAction="#changeSongList" text="HipHop" />
+      <RadioButton fx:id="DiscoList" layoutX="13.0" layoutY="327.0" mnemonicParsing="false" onAction="#changeSongList" text="Disco" />
       <Line endX="97.7857666015625" endY="-1.52587890625E-5" fill="BLACK" layoutX="45.0" layoutY="230.0" startX="-44.0000114440918" strokeWidth="2.0" />
       <Text layoutX="51.0" layoutY="225.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Options" underline="true">
          <font>
